# externalip

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
externalip/: __main__.py
tests/: conftest.py
